=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.15 - In development

=over

=item *

Added 'contribs' param to create_story() and create_media() in
L<Krang::Test::Content>. [Bodo Schulze]

=item *

Fixed upgrade module V3_10 in tags 3.10 - 3.14 and on the trunk. [Bodo
Schulze]

=item *

Fixed problem with F<bin/krang_apachectl> not stopping an running Krang
in Offline Mode [Michael Peters]

=item *

Fixed problem with ISEs resulting from POST requests causing problems with
the ErrorHandler and not giving the same response as GET ISEs. [Michael
Peters]

=item * 

Changed multi-window feature to use a single session per-login instead
of using a different session for each window. [Michael Peters]

=item * 

Fixed ISE (regression) that occurs when you try an advanced search for
retired stories. [Michael Peters]

=item *

Added exception handling for edge cases to
F<bin/krang_charset_convert_data>. [Bodo Schulze]

=item *

Added C<--keep-sessions> option to F<bin/krang_upgrade>. [Michael Peters]

=item * 

Fixed an ISE where stories with duplicate URLs as categories were not
caught and shown to the user. [Michael Peters]

=back

=head2 3.14 - June, 23 2011

=over

=item *

Reset environment variables set by L<ExtUtils::MakeMaker> and
L<Module::Build> to get a clean start. [Bodo Schulze]

=item *

Added script F<bin/krang_storable_freezethaw> to help migrating between
32bit and 64bit architectures. [Bodo Schulze]

=item *

Added C<IgnorePreviewRelatedStoryAssets> and
C<IgnorePreviewRelatedMediaAssets> configuration directives so that
instances can choose to ignore publishing related assets during
preview. [Michael Peters]

=item *

Removed the need for F<bin/krang_addon_dist> to have a valid F<krang.conf>
since it doesn't actually use anything in that. This allows for
automating the building of a package from a Krang svn checkout that is
built. [Michael Peters]

=item *
